--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+  --main-background: rgb(35 33 34);
+  --main-text-color: white;
+}
+
+body {
+  background-color: var( --main-background );
+  color: var( --main-text-color );
+  font-family: 'Libre Franklin';
+}
