--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -19,10 +19,13 @@
   background-color: transparent;
   border: none;
   font-size: 18px;
-  color: var( --main-text-color );
+  color: rgb(167, 167, 167);
   cursor: pointer;
+  transition: all 300ms;
 }
 
-.btn:hover {
+.btn:hover,
+.active {
+  color: var( --main-text-color );
   box-shadow: 0 3px 0 0 orange;
 }
