--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,25 +10,25 @@
   <div class="pages" id="pages">
 
     <div class="home" id="home">
-      <button class="btn home-btn" id="home-btn">
+      <button class="btn home-btn" id="home-btn" routerLink="/home" routerLinkActive="active">
         Inicio
       </button>
     </div>
 
     <div class="chatbot" id="chatbot">
-      <button class="btn chatbot-btn" id="chatbot-btn">
+      <button class="btn chatbot-btn" id="chatbot-btn" routerLink="/chat" routerLinkActive="active">
         ChatBot
       </button>
     </div>
 
     <div class="foods" id="foods">
-      <button class="btn foods-btn" id="foods-btn">
+      <button class="btn foods-btn" id="foods-btn" routerLink="/foods" routerLinkActive="active">
         Alimentos
       </button>
     </div>
 
     <div class="contact" id="contact">
-      <button class="btn contact-btn" id="contact-btn">
+      <button class="btn contact-btn" id="contact-btn" routerLink="/contact" routerLinkActive="active">
         Contacto
       </button>
     </div>
