--- a/src/app/vet/components/diagnosis/diagnosis.component.html
+++ b/src/app/vet/components/diagnosis/diagnosis.component.html
@@ -1,1 +1,18 @@
-<p>diagnosis works!</p>
+
+<input
+  type="text"
+  name="prompt"
+  id="prompt"
+  #promptValue
+>
+
+<button
+  (click)="sendPrompt()"
+>
+  Enviar
+</button>
+
+@if ( responseText.length > 0 ) {
+  {{responseText}}
+}
+
