--- a/src/app/vet/components/diagnosis/diagnosis.component.css
+++ b/src/app/vet/components/diagnosis/diagnosis.component.css
@@ -1,7 +1,79 @@
+.main-content {
+  display: flex;
+  justify-content: center;
+  gap: 5%;
+}
+
+.question {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.send-btn {
+  color: white;
+  background-color: transparent;
+  border: 1px solid white;
+  padding: 10px;
+  border-radius: 10px;
+  transition: all 350ms;
+}
+
+.send-btn:hover {
+  color: black;
+  background-color: white;
+  border: 1px solid black;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+#prompt {
+  width: 300px;
+  height: 150px;
+  border: 2px solid gray;
+  border-radius: 30px;
+  background-color: transparent;
+  color: white;
+  padding: 15px;
+}
+
+.no-resize {
+  resize: none;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal-text {
+  color: black;
+}
+
 .loader {
   width: 48px;
   height: 48px;
-  border: 5px solid #FFF;
+  border: 5px solid black;
   border-bottom-color: transparent;
   border-radius: 50%;
   display: inline-block;
