--- a/src/app/vet/components/diagnosis/diagnosis.component.html
+++ b/src/app/vet/components/diagnosis/diagnosis.component.html
@@ -19,9 +19,7 @@
   </div>
 
   @if ( responseText.length > 0 ) {
-    <div class="response" id="response">
-      {{responseText}}
-    </div>
+    <div class="response" id="response" [innerHTML]="formattedResponse"></div>
   }
 
 </div>
