Añadido estilo deshabilitado del botón de preguntar

--- a/src/app/vet/components/diagnosis/diagnosis.component.css
+++ b/src/app/vet/components/diagnosis/diagnosis.component.css
@@ -30,6 +30,18 @@
   cursor: pointer;
 }
 
+.disabled {
+  color: gray;
+  border: 1px solid gray;
+  cursor: unset;
+}
+
+.disabled:hover {
+  background-color: transparent;
+  color: gray;
+  border: 1px solid gray;
+}
+
 #prompt {
   width: 300px;
   height: 150px;
