--- a/src/app/vet/components/diagnosis/diagnosis.component.html
+++ b/src/app/vet/components/diagnosis/diagnosis.component.html
@@ -7,12 +7,15 @@
       id="prompt"
       class="no-resize"
       #promptValue
+      [(ngModel)]="promptValueText"
     ></textarea>
 
     <button
       class="send-btn pointer"
       id="send-btn"
       (click)="sendPrompt()"
+      [disabled]="!promptValueText.trim()"
+      [ngClass]="{ 'disabled': !promptValueText.trim() }"
     >
       Preguntar
     </button>
