Añadido service para distinguir si ha iniciado sesión el usuario o no
Añadida header para cuando no se haya iniciado sesión

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<header-component></header-component>
+@if (isLoggedIn) {
+  <header-component></header-component>
+} @else {
+  <no-login-header></no-login-header>
+}
 
 
 <router-outlet />
