--- a/src/app/shared/no-login-header/no-login-header.component.html
+++ b/src/app/shared/no-login-header/no-login-header.component.html
@@ -8,20 +8,19 @@
     <button
       class="btn home-btn"
       id="home-btn"
-      routerLink="/home"
+      routerLink="/question"
       routerLinkActive="active"
       aria-current="page"
     >
-      Inicio
+      Pregunta
     </button>
 
     <button
       class="btn contact-btn"
       id="contact-btn"
-      routerLink="/contact"
-      routerLinkActive="active"
+      routerLink="/auth/login"
     >
-      Contacto
+      Iniciar sesión
     </button>
 
   </nav>
