--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<div class="position">
+  <div class="main-container">
+    <div class="title">
+      <h1>Inicia sesión</h1>
+    </div>
+
+    <div class="form-container">
+      <form [formGroup]="form" (ngSubmit)="logIn()" class="form">
+
+        <div class="input-container" id="email-input-container">
+          <label for="email">Correo electrónico</label>
+          <input class="input-field" type="email" id="email" formControlName="email">
+          <div *ngIf="form.get('email')?.invalid && form.get('email')?.touched" class="error">
+            Introduce un correo válido.
+          </div>
+        </div>
+
+        <div class="input-container" id="password-input-container">
+          <label for="password">Contraseña</label>
+          <input class="input-field" type="password" id="password" formControlName="password">
+          <div *ngIf="form.get('password')?.invalid && form.get('password')?.touched" class="error">
+            La contraseña es obligatoria.
+          </div>
+        </div>
+
+        <div class="submit-container">
+          <input type="submit" value="Iniciar sesión" class="submit-button" [disabled]="form.invalid">
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
