--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="position">
   <div class="main-container">
     <div class="title">
-      <h1>Inicia sesión</h1>
+      <h1>Inicia sesión con tu cuenta</h1>
     </div>
 
     <div class="form-container">
@@ -29,5 +29,10 @@
 
       </form>
     </div>
+
+    <div class="register-container">
+      <p>¿No tienes cuenta? <a class="go-to-register" routerLink="/auth/register">Regístrate aquí</a></p>
+    </div>
+
   </div>
 </div>
