--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-@if (isLoggedIn) {
-  <header-component></header-component>
-} @else {
-  <no-login-header></no-login-header>
+@if( !headerOff ) {
+  @if (isLoggedIn) {
+    <header-component></header-component>
+  } @else {
+    <no-login-header></no-login-header>
+  }
 }
 
 
