--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,42 +5,74 @@
 
   <nav class="pages" id="pages" aria-label="Main Navigation">
 
-    <button
-      class="btn home-btn"
-      id="home-btn"
-      routerLink="/home"
-      routerLinkActive="active"
-      aria-current="page"
-    >
-      Inicio
-    </button>
+    @if ( isClient ) {
+      <button
+        class="btn home-btn"
+        id="home-btn"
+        routerLink="/question"
+        routerLinkActive="active"
+        aria-current="page"
+      >
+        Pregunta
+      </button>
 
-    <button
-      class="btn chatbot-btn"
-      id="chatbot-btn"
-      routerLink="/chat"
-      routerLinkActive="active"
-    >
-      ChatBot
-    </button>
+      <button
+        class="btn logout-btn"
+        id="logout-btn"
+        (click)="logOut()"
+      >
+        Cerrar sesión
+      </button>
+    } @else {
 
-    <button
-      class="btn foods-btn"
-      id="foods-btn"
-      routerLink="/foods"
-      routerLinkActive="active"
-    >
-      Alimentos
-    </button>
+      <button
+        class="btn home-btn"
+        id="home-btn"
+        routerLink="/question"
+        routerLinkActive="active"
+        aria-current="page"
+      >
+        Pregunta
+      </button>
 
-    <button
-      class="btn contact-btn"
-      id="contact-btn"
-      routerLink="/contact"
-      routerLinkActive="active"
-    >
-      Contacto
-    </button>
+      <button
+        class="btn chatbot-btn"
+        id="chatbot-btn"
+        routerLink="/chat"
+        routerLinkActive="active"
+      >
+        ChatBot
+      </button>
+
+      <button
+        class="btn foods-btn"
+        id="foods-btn"
+        routerLink="/foods"
+        routerLinkActive="active"
+      >
+        Alimentos
+      </button>
+
+      <button
+        class="btn contact-btn"
+        id="contact-btn"
+        routerLink="/contact"
+        routerLinkActive="active"
+      >
+        Contacto
+      </button>
+
+      <button
+        class="btn logout-btn"
+        id="logout-btn"
+        (click)="logOut()"
+      >
+        Cerrar sesión
+      </button>
+
+    }
+
+
 
   </nav>
 
