Pulido el inicio de sesión

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 @if( !headerOff ) {
   @if ( isLoggedIn ) {
-    <header-component [isClient]="isClient"></header-component>
+    <header-component></header-component>
   } @else {
     <no-login-header></no-login-header>
   }
