Comenzado el diseño diferencial del header

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -17,6 +17,13 @@
       </button>
 
       <button
+        class="btn create-btn"
+        id="create-btn"
+      >
+        Crear incidencia
+      </button>
+
+      <button
         class="btn logout-btn"
         id="logout-btn"
         (click)="logOut()"
