--- a/src/app/shared/no-login-header/no-login-header.component.html
+++ b/src/app/shared/no-login-header/no-login-header.component.html
@@ -1,5 +1,9 @@
 <header class="main" id="main">
-  <h1 class="title-text" id="title-text">
+  <h1
+    class="title-text"
+    id="title-text"
+    routerLink="/home"
+  >
     AutoVet
   </h1>
 
