--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,8 +1,16 @@
+h1 {
+  cursor: pointer;
+}
+
 .main {
   display: flex;
   padding: 30px 80px 30px 40px;
   justify-content: space-between;
   align-items: center;
+}
+
+header.main {
+  position: relative;
 }
 
 .title-text {
@@ -24,8 +32,34 @@
   transition: all 300ms;
 }
 
+.menu-btn {
+  background-color: transparent;
+  border: none;
+  font-size: 18px;
+  color: white;
+  cursor: pointer;
+  transition: all 300ms;
+}
+
 .btn:hover,
 .active {
   color: var( --main-text-color );
   box-shadow: 0 3px 0 0 orange;
+}
+
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: flex-start;
+  position: absolute;
+  top: 115px;
+  right: 2rem;
+  color: white;
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 8px;
+  padding: 1rem;
+  z-index: 9999;
 }
