--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -38,40 +38,28 @@
     } @else {
 
       <button
-        class="btn home-btn"
-        id="home-btn"
-        routerLink="/question"
+        class="btn clients-btn"
+        id="clients-btn"
+        routerLink="/staff/clients"
         routerLinkActive="active"
-        aria-current="page"
       >
-        Pregunta
+        Mis clientes
       </button>
 
       <button
-        class="btn chatbot-btn"
-        id="chatbot-btn"
-        routerLink="/chat"
-        routerLinkActive="active"
+        class="btn appointments-btn"
+        id="appointments-btn"
+        routerLink="/staff/appointments"
       >
-        ChatBot
+        Incidencias
       </button>
 
       <button
-        class="btn foods-btn"
-        id="foods-btn"
-        routerLink="/foods"
-        routerLinkActive="active"
+        class="btn profile-btn"
+        id="profile-btn"
+        routerLink="/user/profile"
       >
-        Alimentos
-      </button>
-
-      <button
-        class="btn contact-btn"
-        id="contact-btn"
-        routerLink="/contact"
-        routerLinkActive="active"
-      >
-        Contacto
+        Mis datos
       </button>
 
       <button
