Creados componentes principales

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -23,6 +23,8 @@
       <button
         class="btn create-btn"
         id="create-btn"
+        routerLink="/user/create"
+        routerLinkActive="active"
       >
         Crear incidencia
       </button>
