--- a/src/app/vet/components/diagnosis/diagnosis.component.css
+++ b/src/app/vet/components/diagnosis/diagnosis.component.css
@@ -1,3 +1,7 @@
+.title {
+  padding: 0px 0px 30px 40px;
+}
+
 .main-content {
   display: flex;
   justify-content: center;
@@ -58,7 +62,7 @@
 
 .response-container {
   width: 550px;
-  max-height: 600px;
+  max-height: 550px;
   height: 100%;
   padding-right: 30px;
   overflow-y: auto;
@@ -126,4 +130,13 @@
   100% {
       transform: rotate(360deg);
   }
+  }
+
+  textarea::placeholder {
+    color: rgb(177, 177, 177);
+  }
+
+  textarea {
+    font-size: 15px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
