Creada página de mis mascotas

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -102,7 +102,7 @@
       id="user-appoinments-btn"
       routerLink="/user/appointments"
     >
-      Mis incidencia
+      Mis incidencias
     </button>
 
     <button
