Creada la página de creación de incidencias.
Ya se pueden crear incidencias de una mascota y se muestran en su página respectiva

--- a/src/app/user/components/create/create.component.html
+++ b/src/app/user/components/create/create.component.html
@@ -1,1 +1,65 @@
-<p>create works!</p>
+<div class="main-content">
+  <div class="title">
+    <h2>Crea una incidencia para cualquiera de tus mascotas</h2>
+    <p>Si tienes alguna duda o problema con tu mascota, no dudes en crear una incidencia. Te ayudaremos a resolverlo.</p>
+  </div>
+
+  <div class="process">
+
+    <div class="first-step">
+      <h3>Elige tu mascota</h3>
+
+      <div class="pets-div">
+        @for (pet of pets; track $index) {
+          <div class="card">
+            <button
+             class="card-button"
+             (click)="selectedPet = pet"
+            >
+              {{ pet.nombre }}
+            </button>
+          </div>
+        }
+      </div>
+    </div>
+
+    @if (selectedPet?.nombre!.length > 0) {
+      <div class="second-step">
+        <h3>Cuéntanos qué le pasa a {{ selectedPet?.nombre }}</h3>
+
+        <div class="problem-container">
+          <textarea
+            type="text"
+            name="problem"
+            id="problem"
+            class="no-resize"
+            #problemTxt
+            [(ngModel)]="problemTxtValue"
+            placeholder='Escríbenos aquí lo que se le sucede a {{selectedPet?.nombre}}'
+          ></textarea>
+
+          <button
+            class="send-btn pointer"
+            id="send-btn"
+            (click)="createAppoinment()"
+            [disabled]="!problemTxtValue.trim()"
+            [ngClass]="{ 'disabled': !problemTxtValue.trim() }"
+          >
+            Mandar información
+          </button>
+        </div>
+
+      </div>
+    }
+  </div>
+
+</div>
+
+@if ( isLoading ) {
+  <div class="modal">
+    <div class="modal-content">
+      <span class="loader"></span>
+      <p class="modal-text">Procesando información...</p>
+    </div>
+  </div>
+}
