Añadido modal que informa de que se ha creado la incidencia de forma correcta

--- a/src/app/user/components/create/create.component.css
+++ b/src/app/user/components/create/create.component.css
@@ -139,3 +139,13 @@ textarea {
       transform: rotate(360deg);
   }
   }
+
+  .close-btn {
+    background-color: rgb(58, 104, 172);
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    transition: all 350ms;
+    width: fit-content;
+  }
