Añadido un iconito bonito al modal de confirmación

--- a/src/app/user/components/create/create.component.css
+++ b/src/app/user/components/create/create.component.css
@@ -149,3 +149,9 @@ textarea {
     transition: all 350ms;
     width: fit-content;
   }
+
+
+  .icon {
+    color: rgb(58, 104, 172);
+    font-size: 60px;
+  }
