--- a/src/app/user/components/create/create.component.html
+++ b/src/app/user/components/create/create.component.html
@@ -67,6 +67,7 @@
 @if ( exit ) {
   <div class="modal">
     <div class="modal-content">
+      <i class="icon material-icons">check</i>
       <p class="modal-text">Su incidencia se ha añadido de forma exitosa</p>
       <button
         class="close-btn pointer"
