--- a/src/app/user/components/appoinments/appoinments.component.html
+++ b/src/app/user/components/appoinments/appoinments.component.html
@@ -10,7 +10,7 @@
         <div class="card">
           <div class="card-header">
             <h3>{{ appoinment.petName }} - {{ appoinment.titulo }}</h3>
-            <p>{{ appoinment.descripcion }}</p>
+            <p class="description">{{ appoinment.descripcion }}</p>
           </div>
           <div class="card-body">
             <p>Estado: {{ appoinment.estado }}</p>
