Página de comidas hecha
Falta retocar

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -21,6 +21,16 @@
       </button>
 
       <button
+        class="btn foods-btn"
+        id="foods-btn"
+        routerLink="/foods"
+        routerLinkActive="active"
+        aria-current="page"
+      >
+        Comidas peligrosas
+      </button>
+
+      <button
         class="btn create-btn"
         id="create-btn"
         routerLink="/user/create"
