--- a/src/app/vet/components/diagnosis/diagnosis.component.html
+++ b/src/app/vet/components/diagnosis/diagnosis.component.html
@@ -1,6 +1,11 @@
 
 <div class="title">
   <h2>Haz tu pregunta aquí</h2>
+  <p>
+    Pregunta cualquier problema que tenga tu mascota, te daremos un diagnostico y recomendaciones para ayudarla.
+    <br />
+    <strong>En cualquier caso, te recomendamos crear una incidencia para una valoración más exhaustiva.</strong>
+  </p>
 </div>
 
 <div class="main-content" id="main-content">
