--- a/src/app/shared/no-login-header/no-login-header.component.html
+++ b/src/app/shared/no-login-header/no-login-header.component.html
@@ -20,6 +20,16 @@
     </button>
 
     <button
+      class="btn foods-btn"
+      id="foods-btn"
+      routerLink="/foods"
+      routerLinkActive="active"
+      aria-current="page"
+    >
+      Comidas peligrosas
+    </button>
+
+    <button
       class="btn contact-btn"
       id="contact-btn"
       routerLink="/auth/login"
