Añadido mensaje de error en el login si las credenciales son inválidas

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -23,6 +23,12 @@
           </div>
         </div>
 
+        @if( showError ) {
+          <div class="error">
+            {{ errorMsg }}
+          </div>
+        }
+
         <div class="submit-container">
           <input type="submit" value="Iniciar sesión" class="submit-button" [disabled]="form.invalid">
         </div>
