Texto del estado de la incidencia capitalizado

--- a/src/app/user/components/appoinments/appoinments.component.html
+++ b/src/app/user/components/appoinments/appoinments.component.html
@@ -12,7 +12,7 @@
             <h3>{{ appoinment.petName }} - {{ appoinment.titulo }}</h3>
             <p class="description">{{ appoinment.descripcion }}</p>
           </div>
-          <div class="card-body">
+          <div class="card-body status">
             <p>Estado: {{ appoinment.estado }}</p>
           </div>
         </div>
