--- a/src/app/staff/components/staff-appointments/staff-appointments.component.html
+++ b/src/app/staff/components/staff-appointments/staff-appointments.component.html
@@ -1,1 +1,50 @@
-<p>staff-appointments works!</p>
+
+<div class="main-content">
+  <h1>Mis incidencias</h1>
+
+  @if( workerAppoinments.length > 0 ) {
+    <div class="cards-div">
+      @for (appoinment of workerAppoinments; track $index) {
+        <div class="card">
+          <div class="card-header">
+            <h3>{{ appoinment.titulo }}</h3>
+            <p class="description">{{ appoinment.descripcion }}</p>
+          </div>
+          <div class="card-body status">
+            <p>Estado: {{ appoinment.estado }}</p>
+          </div>
+        </div>
+      }
+    </div>
+  } @else {
+    <p class="no-appointments">No tienes incidencias registradas.</p>
+  }
+
+  <hr>
+
+  <h2>Incidencias</h2>
+
+  @if( allAppoinments.length > 0 ) {
+    <div class="cards-div">
+      @for (appoinment of allAppoinments; track $index) {
+        <div class="card">
+          <div class="card-header">
+            <h3>{{ appoinment.titulo }}</h3>
+            <p class="description">{{ appoinment.descripcion }}</p>
+          </div>
+          <div class="card-body status">
+            <p>Estado: {{ appoinment.estado }}</p>
+          </div>
+
+          <div class="assign-btn-container">
+            <button (click)="assignAppoinment(appoinment)" class="assign-btn">
+              Asignar
+            </button>
+          </div>
+        </div>
+      }
+    </div>
+  } @else {
+    <p class="no-appointments">No hay incidencias registradas.</p>
+  }
+</div>
