Ahora cuando un trabajador acepta una incidencia, automáticamente se le asigna el cliente propietario de la mascota que tenga esa indicidencia

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -62,6 +62,7 @@
         class="btn appointments-btn"
         id="appointments-btn"
         routerLink="/staff/appointments"
+        routerLinkActive="active"
       >
         Incidencias
       </button>
@@ -70,6 +71,7 @@
         class="btn profile-btn"
         id="profile-btn"
         routerLink="/user/profile"
+        routerLinkActive="active"
       >
         Mis datos
       </button>
