Ahora el trabajador puede ver la información del usuario

--- a/src/app/staff/components/clients/clients.component.html
+++ b/src/app/staff/components/clients/clients.component.html
@@ -3,7 +3,9 @@
   @if (clients.length > 0 ) {
     <div class="cards-div">
       @for (client of clients; track $index) {
-        <div class="card">
+        <div class="card"
+          routerLink="/staff/client-info/{{ client.id }}"
+        >
 
           <div class="photo">
             Foto Usuario
