Se puede recuperar el id del usuario encriptado

--- a/src/app/staff/components/clients-info/clients-info.component.html
+++ b/src/app/staff/components/clients-info/clients-info.component.html
@@ -1,6 +1,15 @@
 <div class="main-content">
   <h1>Información del cliente</h1>
 
+  <div class="buttons">
+    <button
+      class="btn btn-primary"
+      (click)="goToAddPet()"
+    >
+      Añadir mascota
+    </button>
+  </div>
+
   <div class="elements">
 
     <div class="client">
@@ -47,4 +56,6 @@
     </div>
 
   </div>
+
+
 </div>
