--- a/src/app/staff/components/staff-appointments/staff-appointments.component.html
+++ b/src/app/staff/components/staff-appointments/staff-appointments.component.html
@@ -5,7 +5,7 @@
   @if( workerAppoinments.length > 0 ) {
     <div class="cards-div">
       @for (appoinment of workerAppoinments; track $index) {
-        <div class="card">
+        <div class="card"  routerLink="/staff/appointment-info/{{ appoinment.pk }}">
           <div class="card-header">
             <h3>{{ appoinment.titulo }}</h3>
             <p class="description">{{ appoinment.descripcion }}</p>
