--- a/src/app/staff/components/staff-appointments/staff-appointments.component.html
+++ b/src/app/staff/components/staff-appointments/staff-appointments.component.html
@@ -10,8 +10,8 @@
             <h3>{{ appoinment.titulo }}</h3>
             <p class="description">{{ appoinment.descripcion }}</p>
           </div>
-          <div class="card-body status">
-            <p>Estado: {{ appoinment.estado }}</p>
+          <div class="card-body">
+            <p>Estado: {{ getDisplayStatus( appoinment.estado )}}</p>
           </div>
         </div>
       }
