--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -92,11 +92,12 @@
 
 
 @if ( showingMenu ) {
-  <div class="menu">
+  <div class="menu" [ngClass]="{'show': showingMenu}">
     <button
       class="menu-btn profile-btn"
       id="profile-btn"
       routerLink="/user/profile"
+      (click)="closeMenu()"
     >
       Mis datos
     </button>
@@ -105,6 +106,7 @@
       class="menu-btn profile-btn"
       id="user-pets-btn"
       routerLink="/user/pets"
+      (click)="closeMenu()"
     >
       Mis mascotas
     </button>
@@ -113,6 +115,7 @@
       class="menu-btn profile-btn"
       id="user-appoinments-btn"
       routerLink="/user/appointments"
+      (click)="closeMenu()"
     >
       Mis incidencias
     </button>
@@ -120,7 +123,7 @@
     <button
       class="menu-btn logout-btn"
       id="logout-btn"
-      (click)="logOut()"
+      (click)="logOut(); closeMenu()"
     >
       Cerrar sesión
     </button>
