Modificado mucho estilo

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -2,9 +2,13 @@ h1 {
   cursor: pointer;
 }
 
+header {
+  background-color: var(--main-background);
+}
+
 .main {
   display: flex;
-  padding: 30px 80px 30px 40px;
+  padding: 10px 80px 10px 40px;
   justify-content: space-between;
   align-items: center;
 }
