--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,11 @@
 :root {
   --main-background: rgb(35 33 34);
   --main-text-color: white;
+  --new-background: #1e1e1e;
 }
 
 body {
-  background-color: var( --main-background );
+  background-color: var( --new-background );
   color: var( --main-text-color );
   font-family: 'Libre Franklin';
 }
