--- a/src/app/staff/components/staff-appointments/staff-appointments.component.html
+++ b/src/app/staff/components/staff-appointments/staff-appointments.component.html
@@ -33,7 +33,7 @@
             <p class="description">{{ appoinment.descripcion }}</p>
           </div>
           <div class="card-body status">
-            <p>Estado: {{ appoinment.estado }}</p>
+            <p class="capitalized">Estado: {{ appoinment.estado }}</p>
           </div>
 
           <div class="assign-btn-container">
